# mytools

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  diff.txt  linker.ld
src/: clear.cpp  dir.cpp  echo.cpp  ls.cpp  mkdir.cpp  rm.cpp  rmdir.cpp  shutdown.cpp  type.cpp
